# claude-desktop-ssh

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  TODOS.md  clauded.flatpak  docker-compose.yml
.claude/: REVIEW_LOG.md
.claude/PRPs/plans/: auth-pairing.plan.md
.claude/PRPs/reports/: challenge-response-auth-report.md  navette-ux-fixes-report.md
.claude/PRPs/reviews/: pr-18-review.md  pr-6-review.md
.github/workflows/: ci.yml  release.yml
PROMPTS/: roadmap-hardening.md
desktop/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts
desktop/e2e/: connect.spec.ts  helpers.ts  navigation.spec.ts  session.spec.ts
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src/components/: ApprovalBanner.tsx  ConnectForm.tsx  ConversationPanel.tsx  DetailPanel.tsx  DiffView.tsx  FileBrowser.tsx  KeyboardShortcuts.tsx  Layout.tsx  MessageBubble.tsx  PromptLibrary.tsx  SchedulePanel.tsx  SecretsVault.tsx  SessionHistory.tsx  SessionSidebar.tsx  SettingsDialog.tsx  (+2 more)
docs/CODEMAPS/: ARCHITECTURE.md  BACKEND.md  DATABASE.md  DEPENDENCIES.md  FRONTEND.md  INDEX.md
flatpak/: build.sh  com.beary.clauded.service  com.beary.clauded.yml  io.entrevoix.navette.json  io.entrevoix.navette.metainfo.xml  io.entrevoix.navetted.metainfo.xml  io.entrevoix.navetted.service  io.entrevoix.navetted.yml  navetted.service
mobile/: .env.example  .gitignore  App.tsx  app.json  package-lock.json  package.json  proguard-rules.pro  tsconfig.json
mobile/plugins/: withReleaseSigning.js
mobile/src/: SnackbarContext.tsx  ThemeContext.tsx  theme.ts
scripts/: release.sh
src/: claude.rs  config.rs  db.rs  hook.rs  main.rs  notify.rs  ws.rs
(+75 files in other folders)
