[package]
name = "navetted"
version = "0.1.0"
edition = "2021"
authors = ["Entrevoix, Inc."]
license = "AGPL-3.0-only"
repository = "https://github.com/Entrevoix/navette"
description = "WebSocket daemon bridging mobile clients to Claude Code CLI"

[[bin]]
name = "navetted"
path = "src/main.rs"

[[bin]]
name = "navetted-hook"
path = "src/bin/navetted-hook.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "sync", "net", "time", "io-util", "io-std", "macros"] }
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
anyhow = "1"
rusqlite = { version = "0", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
portable-pty = "0.8"
toml = "0.8"
rand = "0.8"
subtle = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ring = "0.17"
qrcode = "0.14"
base64 = "0.22"
local-ip-address = "0.6"
hex = "0.4"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = "0.13"
