[package]
name = "navette-desktop"
version = "0.1.0"
description = "Desktop client for navette"
authors = ["Entrevoix"]
license = "AGPL-3.0-only"
edition = "2021"

[lib]
name = "navette_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
